Added get dish by date
